Added server autodiscovery feature